# seat-split

./: .dockerignore  .example.env  .flake8  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Dockerfile-dev  Dockerfile_copy  Mateen Gmail (prepared version).csv  README.md  count_lines_of_code.sh  create_requirements.sh  csv_import_manager.py  csv_manager.py  dev-requirements.txt  docker-compose-prod.yml  docker-compose.prod.yml  docker-compose.yml  docker_deploy.sh  gsheets_engine.py  heroku.yml  manage.py  mlb_sold_inventory_downloader.py  prod-requirements.txt  pyproject.toml  raw_data_import.py  requirements.in  requirements.txt  ruff.toml  run_tests.sh
django-backend/: .dockerignore  .env.dev.example  .env.prod.example  Dockerfile  Dockerfile-dev  Dockerfile-prod  Procfile  cloudbuild.yaml  dev-requirements.txt  entrypoint-prod.sh  heroku.yml  manage.py  prod-requirements.txt  pyproject.toml
django-backend/apps/: config.py  file_importer.py  filters.py  permissions.py  routers.py  serializers.py  urls.py  utils.py  validators.py
django-backend/apps/accounts/: admin.py  filters.py  models.py  resource.py  routers.py  serializers.py  utils.py  views.py
django-backend/apps/accounts/api/: routers.py
django-backend/apps/accounts/migrations/: 0001_initial.py  0002_auto_20230210_0242.py  0003_historicalaccounts.py  0004_auto_20230216_2234.py  0005_auto_20230301_2253.py  0006_auto_20230309_0451.py  0007_auto_20230409_2355.py  0008_accounts_am_created_accounts_am_password_and_more.py
django-backend/apps/accounts/tests/: settings.py  test_accounts_authenticated_and_authorized_crud.py  test_accounts_authenticated_but_unauthorized.py  test_accounts_crud_authenticated_and_authorized.py  test_accounts_crud_authenticated_but_unauthorized.py  test_accounts_filters_lookups.py
django-backend/apps/cards/: admin.py  filters.py  models.py  routers.py  serializers.py  utils.py  validators.py  views.py
django-backend/apps/cards/api/: routers.py
django-backend/apps/cards/migrations/: 0001_initial.py  0002_historicalcards.py
django-backend/apps/cards/tests/: settings.py  tests_cards_authenticated_and_authorized_crud.py  tests_cards_authenticated_but_unauthorized_crud.py  tests_cards_crud_authenticated_and_authorized.py  tests_cards_crud_authenticated_but_unauthorized.py
django-backend/apps/common_services/: available_seats_calculator.py  csv_converter.py  csv_normalizer.py  duplicate_checker.py  file_exporter.py  file_importer.py  jwt_token_claims.py  permissions.py  utils.py
django-backend/apps/email_domains/: admin.py  apps.py  migration_manager.py  models.py  resource.py  routers.py  serializers.py  utils.py  views.py
django-backend/apps/email_domains/api/: routers.py
django-backend/apps/email_domains/migrations/: 0001_initial.py  0002_auto_20230309_0451.py  0003_alter_emaildomains_options.py
django-backend/apps/email_domains/services/: data_generator.py  utils.py
django-backend/apps/in_app_notifications/: apps.py
django-backend/apps/in_app_notifications/api/: __init__.py  serializers.py
django-backend/apps/mobile_numbers/: admin.py  filters.py  models.py  routers.py  serializers.py  utils.py  views.py
django-backend/apps/mobile_numbers/api/: routers.py
django-backend/apps/mobile_numbers/migrations/: 0001_initial.py  0002_historicalmobilenumbertransaction.py  0003_auto_20230227_0508.py  0004_auto_20230301_2254.py  0005_alter_mobilenumbertransaction_options.py
django-backend/apps/stt/: admin.py  apps.py  filters.py  forms.py  models.py  resources.py  signals.py  tasks.py  utils.py  views.py
django-backend/apps/stt/admin/: __init__.py  base.py  event.py  purchase.py  season.py  team.py  ticket.py  ticket_holder.py  venue.py
django-backend/apps/stt/api/: __init__.py  filters.py  health_check.py  routers.py  serializers.py  urls.py  validators.py
django-backend/apps/stt/migrations/: 0001_initial.py  0002_alter_ticketholder_tickets_data.py  0002_ticketholderteam_and_more.py  0003_alter_ticketholder_tickets_data.py  0003_rename__credentials_website_password_ticketholderteam_credentials_website_password.py  0004_alter_event_options_historicalevent.py  0004_remove_ticketholder_is_verified.py  0005_alter_team_options.py  0006_alter_ticketholderteam_ticket_holder.py  0007_alter_ticketholderteam_team.py  0008_teamevent_updated_at_ticketholderteam_updated_at.py  0009_historicalticket_historicalpurchase.py  0010_historicalticketholder.py  0011_rename_date_created_historicalticketholder_created_at_and_more.py  0012_ticket_unique_ticket.py  0013_ticketholderteam_row_ticketholderteam_seat_and_more.py  0014_ticketholderteam_is_confirmed.py  0015_alter_ticketholderteam_is_confirmed.py  0016_team_home_venue.py  0017_alter_historicalpurchase_invoice_number_and_more.py  0018_alter_purchase_ticket.py  0019_historicalticket_season_ticket_season.py  (+40 more)
django-backend/apps/support/: admin.py  models.py  tasks.py
django-backend/apps/us_addresses/: admin.py  apps.py  models.py  routers.py  utils.py  views.py
django-backend/apps/users/: admin.py  forms.py  models.py  routers.py  serializers.py  tasks.py  views.py
django-backend/apps/utils/: file_exporter.py  file_importer.py
django-backend/apps/venues/: admin.py  models.py  routers.py  serializers.py  views.py
django-backend/config/: __init__.py  celery.py  global_settings.py  middlewares.py  settings.py  urls.py  yasg.py
django-backend/config/components/: business_related.py  celery.py  django_filters.py  djoser.py  global_settings.py  import_export.py  internationalization.py  logger.py  query_count.py  redis.py  rest_framework.py  rollbar.py  simple_jwt.py  slack_integration.py  smtp_and_email.py  swagger.py
django-backend/templates/admin/: base.html
django-backend/templates/data_processing/: json_to_processed_csv.html
django-backend/templates/emails/: account_verification.html  account_verified.html  contact_notification.html  email_change_confirmation.html  email_change_confirmed.html  password_reset_email.html  styles.css  ticket_holder_team_confirmed.html  ticket_sold.html
(+404 files in other folders)
