[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-backend"
version = "1"
authors = [
    {name = "Artem Samoilov", email = "asamoilov@lewanddowski.com"},
]
description = "Django backend for lewanddowski-crm based on django rest framework."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django",
    "django-filter",
    "dj-database-url",
    "django-import-export",
    "djangorestframework",
    "django-truncate",
    "django_debug_toolbar",
    "djangorestframework-api-key",
    "djangorestframework-simplejwt",
    "djoser",
    "drf-yasg",
    "gunicorn",
    "pip-tools",
    "psycopg2",
    "psycopg2-binary",
    "python-dotenv",
    "rollbar",
    "whitenoise",
    "django-cors-headers",
    "django-split-settings",
    "drf-flex-fields",
    "django-simple-history",
    "pygount",
    "newrelic",
    "faker",
    "django-cachalot",
    "django-redis",
]

[project.optional-dependencies]
dev = [
    "sqlalchemy",
    "coverage",
    "pandas",
    "beautifulsoup4",
    "django-querycount",
    "flake8",
    "pre-commit",
]

[tool.isort]
known_first_party = "apps, config, tests"
known_django = "django"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]
