[tool.poetry]
name = "django-backend"
version = "0.1.0"
description = "Django backend for season-ticket-tech project based on django rest framework."
authors = ["Artem Samoilov <asamoilov@lewanddowski.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dj-database-url = "^1.2.0"
django = "^4.2"
django-cors-headers = "^3.13.0"
django-filter = "^22.1"
django-import-export = "^3.0.2"
django-simple-history = "^3.2.0"
django-split-settings = "^1.2.0"
django-templated-mail = "^1.1.1"
django-truncate = "^0.1"
djangorestframework = "^3.13.1"
djangorestframework-api-key = "^2.2.0"
djangorestframework-simplejwt = "^4.8.0"
drf-flex-fields = "^1.0.0"
faker = "^17.6.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.6"
python-dotenv = "^0.21.0"
pygount = "^1.5.1"
rollbar = "^0.16.3"
pandas = "^2.0"
drf-yasg = "^1.21.7"
whitenoise = "^6.5.0"
celery = "^5.3.4"
requests = "^2.31.0"
redis = "^5.0.0"
slack-sdk = "^3.23.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.2"
pre-commit = "^3.2"
aiohttp = "^3.8.4"
loguru = "^0.7.0"
pydantic-settings = "^2.0.3"
django-querycount = "^0.8.3"
django-extensions = "^3.2.3"


[tool.isort]
known_first_party = "apps, config, tests"
known_django = "django"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]

[build-system]
requires = ["poetry-core>=1.6.1"]
build-backend = "poetry.core.masonry.api"
