[tool.poetry]
name = "django-backend"
version = "0.1.0"
description = "Django backend for season-ticket-tech project based on django rest framework."
authors = ["Artem Samoilov <asamoilov@lewanddowski.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dj-database-url = "^1.2.0"
django = "^4.2"
django-cors-headers = "^3.13.0"
django-filter = "^22.1"
django-import-export = "^3.0.2"
django-simple-history = "^3.2.0"
django-split-settings = "^1.2.0"
django-templated-mail = "^1.1.1"
django-truncate = "^0.1"
djangorestframework = "^3.13.1"
djangorestframework-simplejwt = "^4.8.0"
drf-flex-fields = "^1.0.0"
faker = "^17.6.0"
gunicorn = "^20.1.0"
python-dotenv = "^0.21.0"
pygount = "^1.5.1"
rollbar = "^0.16.3"
pandas = "2.0"
drf-yasg = "^1.21.7"
celery = "^5.3.4"
requests = "^2.31.0"
redis = "^5.0.0"
slack-sdk = "^3.23.0"
django-request-logging = "^0.7.5"
django-health-check = "^3.17.0"
pillow = "^10.1.0"
django-admin-rangefilter = "^0.11.2"
django-celery-results = "^2.5.1"
django-celery-beat = "^2.6.0"
django-cryptography = "^1.1"
ghapi = "^1.0.4"
loguru = "^0.7.2"
django-notifications-hq = "^1.8.3"
psycopg = {extras = ["binary"], version = "^3.1.18"}
numpy = "^1.22.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.2"
pre-commit = "^3.2"
aiohttp = "^3.8.4"
pydantic-settings = "^2.0.3"
django-querycount = "^0.8.3"
django-extensions = "^3.2.3"
ruff = "^0.3.0"

[tool.ruff]
line-length = 110
fix = true

[tool.ruff.lint]
ignore = ["F841"]
select = ["I"]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true
line-ending = "auto"

[tool.ruff.lint.isort]
length-sort-straight = true
lines-between-types = 1
known-local-folder = [
    "apps",
    "config",
]

[build-system]
requires = ["poetry-core>=1.7.1"]
build-backend = "poetry.core.masonry.api"
